--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.8",
-    "openai": "^4.47.3"
+    "openai": "^4.51.0"
   }
 }
