docker error handle

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
     ports:
       - "80:8082"
     environment:
+      - NODE_ENV=production
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-    # volumes 설정 제거
+    volumes:
+      - ./logs:/usr/src/app/logs
 
 networks:
   default:
